--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,7 +95,7 @@ main {
 
 .fill {
   border-radius: 7px;
-  width: 20%;
+  width: 0%;
   height: 100%;
   background-color: red;
 }
@@ -117,9 +117,7 @@ main {
   width: 100%;
 }
 
-.settings {
-  height: 25%;
-}
+
 
 .inputs {
   display: grid;
@@ -150,6 +148,8 @@ main {
   .container{
     width: 75%;
     height: 40%;
+    max-height: 100%;
+    flex-wrap: wrap;
   }
 
   .title p{
@@ -162,6 +162,10 @@ main {
 
   .strength-bar{
     height: 0.4vh;
+  }
+
+  .inputs{
+    grid-template-columns: repeat(1, 1fr);
   }
 
   .inputs label{
